[gd_scene load_steps=2 format=3 uid="uid://duu18ax3r6re0"]

[ext_resource type="Script" path="res://gui/scripts/change_scene_button.gd" id="1_y3q32"]

[node name="change_scene_button" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_y3q32")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
